assets/css/app.scss
/* This file is for your main application css. */
@import "../node_modules/nprogress/nprogress.css";
@import "~bootstrap/scss/bootstrap";

/* LiveView specific classes for your customizations */
.phx-no-feedback.invalid-feedback,
.phx-no-feedback .invalid-feedback {
  display: none;
}

:not(.phx-no-feedback)>.is-not-valid {
  @extend .is-invalid;
}


.phx-click-loading {
  opacity: 0.5;
  transition: opacity 1s ease-out;
}

.phx-disconnected {
  cursor: wait;
}

.phx-disconnected * {
  pointer-events: none;
}

.phx-modal {
  opacity: 1 !important;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
}

.phx-modal-content {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

.phx-modal-close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.phx-modal-close:hover,
.phx-modal-close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.root.big {
  .details {
    display: none;
  }

  .big {
    display: block;
  }
}

.photo_item {
  border: 1px solid #dddddd;
  height: 180px;
  padding-top: 10px;
  text-align: center;
  width: 140px;
  overflow: hidden;

  .name {
    font-weight: bold;
  }

  .subtitle {
    color: #333;
  }

  &:hover {
    border: 1px solid #000;
  }

  &.removed {
    text-decoration: line-through;
    opacity: 0.5;
  }

  &.regenerate {
    background: #CCE;
    color: #333;
  }
}

.related {
  .name {
    font-weight: bold;
  }

  .description {
    margin-top: 10px;
  }
}

.list .hoverable {
  display: inline-block;
}

/* PHOTO LIST */
.parents {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin-top: 10px;

  .arrow {
    // padding-top: 90px;
    vertical-align: middle;
  }

  .list .hoverable {
    display: block;
  }
}

.photo_list {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  user-select: none;

  .selected {
    color: #212529;
    background: #F39814;
  }

  .last_clicked {
    border-style: dashed;
    border-width: 2px;
  }

  .selecting {
    color: #212529;
    background: #FECA40;
  }

  .photo_item {
    margin: 10px;
  }
}

.photo_table {
  width: 400px;
}

form {
  width: 400px;
}

.details {
  border: 1px solid #dddddd;
  margin-top: 10px;
  padding: 5px;
  position: relative;

  .btn-prev {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translate(0%, -50%);
    z-index: 11;
  }

  .btn-next {
    position: absolute;
    top: 50%;
    left: 100%;
    transform: translate(-100%, -50%);
    z-index: 11;
  }

  &.removed {
    text-decoration: line-through;
    color: #ccc;

    table {
      color: #ccc;
      text-decoration: none;
    }

    form {
      color: #212529;
      text-decoration: none;
    }
  }

  &.regenerate {
    background: #CCE;
    color: #333;

    table,
    form {
      color: #212529;
    }
  }

  &.big {
    position: absolute;
    background: black;
    color: white;
    width: 100%;
    height: 100%;
    z-index: 10;
    left: 0;
    top: 0;
    margin: 0;
    border: none;
    padding: 0;

    .photo {
      position: absolute;
      top: 50%;
      left: 50%;
      margin-right: -50%;
      transform: translate(-50%, -50%);
      z-index: -1;

      width: 100%;
      height: 100%;

      img,
      video {
        width: 100%;
        height: 100%;
        object-fit: contain;
      }
    }

    .title {
      display: none;
    }

    .parents {
      display: none;
    }

    .photo_table {
      display: none;
    }

    .btn-prev:hover .hover,
    .btn-next:hover .hover {
      display: none;
    }

    .photo_table,
    form {
      color: #212529;
      background: #fff;
      padding: 10px;
      border-radius: 0.25em;
    }

    h2:hover+div .photo_table {
      position: absolute;
      display: block;
    }
  }
}

.photo_details {
  // position: relative;
  // border: 1px solid #dddddd;
  margin-top: 10px;
  // padding: 5px;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;

  .photo_table,
  form {
    margin-left: 10px;
  }
}

.photo .title {
  display: flex;
  justify-content: space-between;

  div {
    display: inline;
  }
}

.autoselect {
  input {
    width: auto;
    display: inline;
    border: none;
  }

  .selected {
    border: 1px solid black;
    border-radius: 0.25em;
    background: #88ff88;
    padding: 4px;
    display: inline-block
  }

  &:focus-within {
    @extend .form-control, :focus;
  }
}

.item {
  border: 1px solid #dddddd;
  border-radius: 0.25em;
  background: #ffff88;
  padding: 4px;
  margin: 4px;
  display: inline-block;

  &:hover {
    border: 1px solid #000;
  }
}

.hoverable {
  position: relative;

  .hover {
    display: none;
    color: #212529;
    background: white;
    margin: 0;
    left: 10px;
    top: 10px;
    position: absolute;
    z-index: 100;
  }
}

.hoverable:hover {
  .hover {
    display: inline-block;
  }

}

